tests/ui/invalid_macro_args.stderr
error: positional argument or varargs(*) not allowed after keyword arguments
 --> tests/ui/invalid_macro_args.rs:3:21
  |
3 | #[pyfunction(a = 5, b)]
  |                     ^

error: keyword argument or kwargs(**) is not allowed after kwargs(**)
 --> tests/ui/invalid_macro_args.rs:8:29
  |
8 | #[pyfunction(kwargs = "**", a = 5)]
  |                             ^^^^^

error: / is not allowed after /, varargs(*), or kwargs(**)
  --> tests/ui/invalid_macro_args.rs:13:25
   |
13 | #[pyfunction(a, "*", b, "/", c)]
   |                         ^^^

error: / is not allowed after /, varargs(*), or kwargs(**)
  --> tests/ui/invalid_macro_args.rs:18:27
   |
18 | #[pyfunction(a, args="*", "/", b)]
   |                           ^^^

error: / is not allowed after /, varargs(*), or kwargs(**)
  --> tests/ui/invalid_macro_args.rs:23:30
   |
23 | #[pyfunction(a, kwargs="**", "/", b)]
   |                              ^^^

error: * is not allowed after varargs(*) or kwargs(**)
  --> tests/ui/invalid_macro_args.rs:28:29
   |
28 | #[pyfunction(kwargs = "**", "*", a)]
   |                             ^^^
